Fix login, make red leather visible again

--- a/sugarcrm/styleguide/less/sugarmobile.less
+++ b/sugarcrm/styleguide/less/sugarmobile.less
@@ -912,6 +912,7 @@ color: @gray;
 	background: #E61718 url(../img/leather-red.png);
   @shadow: inset 0 0 8px rgba(0,0,0,.6);
   .box-shadow(@shadow);
+  height:100%;
 }
 .login .modal, .login .modal-header, .login .modal-footer, .login .modal-body {
 border: none;
